Project MovieTicketSystem {
  database_type: "mssql"
}

Table users {
  user_id        int           [pk, increment]
  name           nvarchar[100] [not null]
  email          nvarchar[150] [not null, unique]
  password_hash  nvarchar[255] [not null]
  created_at     datetime      [not null, default: `GETDATE()`]
}

Table movies {
  movie_id     int            [pk, increment]
  title        nvarchar[200]  [not null]
  duration     int            [not null]
  description  nvarchar[500]
  rating       nvarchar[10]
  release_date date
  image_banner nvarchar[255]
}

Table screens {
  screen_id     int           [pk, increment]
  name          nvarchar[50]  [not null]
  seat_capacity int           [not null]
}

Table seats {
  seat_id   int            [pk, increment]
  screen_id int            [not null, ref: > screens.screen_id]
  row       char[1]        [not null]
  number    int            [not null]
  type      nvarchar[20]
}

Table showtimes {
  showtime_id int             [pk, increment]
  movie_id    int             [not null, ref: > movies.movie_id]
  screen_id   int             [not null, ref: > screens.screen_id]
  start_time  datetime        [not null]
  price       decimal(8,2)    [not null]
}

Table bookings {
  booking_id    int            [pk, increment]
  user_id       int            [not null, ref: > users.user_id]
  showtime_id   int            [not null, ref: > showtimes.showtime_id]
  booking_time  datetime       [not null, default: `GETDATE()`]
  total_price   decimal(10,2)  [not null]
  status        nvarchar[20]   [not null]
}

Table tickets {
  ticket_id  int           [pk, increment]
  booking_id int           [not null, ref: > bookings.booking_id]
  seat_id    int           [not null, ref: > seats.seat_id]
  price      decimal(8,2)  [not null]
}

Table payments {
  payment_id int            [pk, increment]
  booking_id int            [not null, ref: > bookings.booking_id]
  amount     decimal(10,2)  [not null]
  method     nvarchar[30]   [not null]
  paid_at    datetime       [not null, default: `GETDATE()`]
}